--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "mongoose": "^4.2.5",
     "passport": "^0.3.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "react": "~0.14.2",
+    "style-loader": "~0.13.0",
+    "css-loader": "~0.23.0"
   }
 }
