--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Ecrypted Messager",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run serve | npm run dev",
+    "serve": "./node_modules/.bin/http-server -p 8080",
+    "dev": "webpack-dev-server --progress --colors --port 8090"
   },
   "repository": {
     "type": "git",
@@ -27,8 +30,14 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "babel-core": "^6.1.21",
+    "babel-loader": "^6.2.0",
+    "css-loader": "~0.23.0",
+    "http-server": "^0.8.5",
+    "jsx-loader": "^0.13.2",
     "react": "~0.14.2",
     "style-loader": "~0.13.0",
-    "css-loader": "~0.23.0"
+    "webpack": "^1.12.6",
+    "webpack-dev-server": "^1.12.1"
   }
 }
