--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "react": "~0.14.2",
     "style-loader": "~0.13.0",
     "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "babel-preset-es2015": "~6.1.18",
+    "babel-preset-react": "~6.1.18",
+    "babel-preset-stage-0": "~6.1.18"
   }
 }
