--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ecrypted Messager",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,19 @@
   },
   "homepage": "https://github.com/Vannilaknight/CyphIm#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
+    "connect-flash": "^0.1.1",
+    "consolidate": "^0.13.1",
     "express": "^4.13.3",
-    "mongoose": "^4.2.5",
+    "express-session": "^1.12.1",
+    "http": "0.0.0",
+    "mongoose": "^4.2.6",
+    "mustache": "^2.2.0",
     "passport": "^0.3.2",
-    "path": "^0.12.7"
-  }
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "socket.io": "^1.3.7"
+  },
+  "devDependencies": {}
 }
