--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-<<<<<<< HEAD
-    "start": "node server.js"
-=======
-    "start": "npm run serve | npm run dev",
+    "start": "node server.js",
+    "start-dev": "npm run serve | npm run dev",
     "serve": "./node_modules/.bin/http-server -p 8080",
     "dev": "webpack-dev-server --progress --colors --port 8090"
->>>>>>> 36ce1782650c77619c8d917229625380c2fff13d
   },
   "repository": {
     "type": "git",
